# Partitioned-Binary-State-Tree-Locality-Driven-Design-Notes-for-EIP-7864

./: .gitignore  EF_NETWORK_HANDOFF.md  ETHEREUM_EVOLUTION_PRINCIPLES.md  IMPLEMENTATION.md  README.md  VISION_ONE_PAGER.md  api-surface.lock.json  cli.py  demo.py  network-readiness.manifest.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: auto-review-bot.yml  auto-review-trigger.yml  (+1 more)
pbt/: __init__.py  constants.py  formal.py  gas.py  hash.py  metadata.py  stem_subscription.py  tree.py  verified_rpc.py  wallet.py
pbt-rs/: Cargo.toml  README.md
pbt-rs/benches/: core_ops.rs
pbt-rs/scripts/: release_bundle.sh
pbt-rs/src/: ethereum.rs  hash.rs  lib.rs  migration.rs  proof_format.rs  tree.rs
pbt-rs/tests/: core_roundtrip.rs  ethereum_keys.rs  hash_mode.rs  locality_vectors.rs  migration.rs  proof_format.rs  property.rs  vector_fold.rs
pbt-rs/tests/vectors/: SHA256SUMS  cross_client_cases.json  locality_vector.json  migration_fixture.json  proving_profile_calibration.json
pbt_eip7864.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_ef_handoff.py  check_tracked_cache_artifacts.sh  clean_generated.sh  generate_narrative_brief.py  generate_performance_envelopes.py  generate_supply_chain_artifacts.py  run_cross_client_conformance.py  run_rollback_drill.py  update_vector_checksums.py  validate_api_release_policy.py  validate_api_surface.py  validate_frozen_vectors.py  validate_network_readiness.py  validate_release_notes.py  validate_supply_chain_artifacts.py  verify_release_artifacts.py
tests/: conftest.py  test_auto_review_bot_workflow.py  test_embedding.py  test_formal.py  test_formal_dashboard.py  test_fuzz_parsers.py  test_gas.py  test_generate_narrative_brief.py  test_hash.py  test_metadata.py  test_minimal_verifier.py  test_properties.py  test_proving_profiles.py  test_rust_manifest.py  test_stem_subscription.py  test_tree.py  test_validate_supply_chain_artifacts.py  test_verified_rpc.py  test_verify_release_artifacts.py  test_wallet.py  test_witness_compression.py
(+9 files in other folders)
