[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pbt-eip7864"
version = "0.1.0"
description = "Reference implementation of the Partitioned Binary Tree (EIP-7864)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC0-1.0" }
keywords = ["ethereum", "state-tree", "merkle", "eip-7864"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["pbt*"]
