[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbt-eip7864"
version = "0.1.0"
description = "Reference implementation of the Partitioned Binary Tree (EIP-7864)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC0-1.0" }
keywords = ["ethereum", "state-tree", "merkle", "eip-7864"]

dependencies = [
    "blake3>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.setuptools.packages.find]
include = ["pbt*"]
