[package]
name = "pbt-rs"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Rust reference core for EIP-7864 Partitioned Binary Tree"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
proptest = "1"

[[bench]]
name = "core_ops"
harness = false
